# crystal-prop-bench

./: .gitignore  DECISIONS.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
docs/plans/: 2026-04-05-phase-a-design.md  2026-04-05-phase-a-implementation.md
results/tables/: benchmark.csv  bias_check.csv  calibration_sweep.csv  conformal_coverage.csv  domain_shift.csv  failure_cases_tier1.csv  failure_cases_tier2.csv  shap_importance_tier1.csv  shap_importance_tier1_halide.csv  shap_importance_tier1_nitride.csv  shap_importance_tier1_oxide.csv  shap_importance_tier1_sulfide.csv  shap_importance_tier2.csv  shap_importance_tier2_halide.csv  shap_importance_tier2_nitride.csv  shap_importance_tier2_oxide.csv  shap_importance_tier2_sulfide.csv
scripts/: check_regression.py  create_fixture.py  download_data.py  run_evaluation.py  run_plots.py  run_shap.py  run_tier1.py  run_tier2.py  run_tier3.py  run_tier3_modal.py
src/crystal_prop_bench/data/: adapter.py  chemistry.py  featurizers.py  graph_builder.py  mp_adapter.py  schemas.py  splits.py
tests/: conftest.py  test_adapters.py  test_alignn_model.py  test_chemistry.py  test_conformal.py  test_domain_shift.py  test_explainability.py  test_featurizers.py  test_graph_builder.py  test_integration.py  test_metrics.py  test_models.py  test_schemas.py  test_splits.py
tests/fixtures/: fixture_crystals.parquet  fixture_magpie_features.parquet  fixture_meta.json  fixture_structures.pkl  fixture_voronoi_features.parquet  regression_thresholds.json
(+8 files in other folders)
